@@ -1,6 +1,6 @@
 requires strictures => 2;
 requires Moo => 2;
-requires PPR => '0.001004';
+requires PPR => '0.001006';
 requires Mu => 0;
 requires 'Module::Runtime' => 0;
 requires 'List::Util' => '1.45';
